<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>apress.jakarta.persistence.ee10</groupId>
        <artifactId>ee10-parent</artifactId>
        <version>1.0.0</version>
        <relativePath>../../../pom.xml</relativePath>
    </parent>

    <artifactId>ch2-employess-service</artifactId>
    <version>1.0.0</version>
    <name>Chapter 2 Employees</name>
    <description>Chapter 2 Employees</description>

    <packaging>war</packaging>

    <dependencies>
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>eclipselink</artifactId>
        </dependency>
        <!-- Test dependencies below -->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/model</source>
                                <source>src/client</source>
                             </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
        </plugins>

    </build>

    <profiles>
        <profile>
            <id>derby</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <resources>
                    <resource>
                        <directory>etc/persistence/derby</directory>
                    </resource>
                </resources>
            </build>
        </profile>
        <profile>
            <id>hsqldb</id>
            <build>
                <resources>
                    <resource>
                        <directory>etc/persistence/hsqldb</directory>
                    </resource>
                </resources>
            </build>
        </profile>
    </profiles>

</project>